# ml_ops_testing_2

./: README.md  data.dvc  pyproject.toml  training_notebook.ipynb
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
dvc_plots/: index.html
dvclive/: metrics.json
dvclive/plots/metrics/: depth.tsv
