[tool.poetry]
name = "ml-ops-testing-2"
version = "0.1.0"
description = ""
authors = ["FarraenElysia <farraen.mohd-azmin@wae.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = {extras = ["s3"], version = "^3.59.1"}
catboost = "^1.2.7"
minio = "^7.2.15"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
